# axum-avatar-api

./: Cargo.toml  README.md
src/: errors.rs  main.rs
